--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,5 +46,5 @@ jobs:
     - name: Upload build artifact
       uses: actions/upload-artifact@v2
       with:
-        name: PythonMouseDrawLine-{{ matrix.os }}
-        path: dist/*
+        name: PythonMouseDrawLine-${{ matrix.os }}
+        path: dist
